--- a/tomagatchi/index.html
+++ b/tomagatchi/index.html
@@ -6,10 +6,7 @@
 	</head>
 	<body class="bg" onload="onLoadFunction()">
 
-  <img src="../img/mangoca.png" width="40%" id="mango" alt="cat
-  in a mango with a red (top) to yellow (bottom) gradiant with
-  its legs and head poking out of the mango" onmouseover=showNameM()
-  onmouseout=hideNameM() onclick=add()>
+  <img src="../img/mangoca.png" width="40%" id="mango" onclick=add()>
   
   <img src="../img/applecat.png" width="50%" id="apple" alt="cat
   in a red apple costume with its head and legs poking out" onmouseover=showNameA()
